correct bug 100vh on mobile

--- a/styles/modules/Contact.module.scss
+++ b/styles/modules/Contact.module.scss
@@ -8,6 +8,10 @@
         max-width: 650px;
         margin: auto;
 
+        textarea {
+            resize: none;
+        }
+
         input, textarea {
             display: block;
             width: 100%;
