--- a/styles/modules/Footer.module.scss
+++ b/styles/modules/Footer.module.scss
@@ -52,7 +52,7 @@
             }
 
             &__menuSocialNetworks {
-                margin-top: -15px;
+                margin-top: -10px;
 
                 ul {
                     display: flex;
@@ -77,7 +77,7 @@
                     display: flex;
                     flex-direction: column;
                     flex-wrap: wrap;
-                    height: 100px;
+                    height: 110px;
                     width: 100%;
                     max-width: 270px;
 
