--- a/styles/modules/Hero.module.scss
+++ b/styles/modules/Hero.module.scss
@@ -2,9 +2,8 @@
 
 .hero {
     width: 100%;
-    height: 100vh;
     color: #FFF;
-    padding: 25px;
+    padding: 25px 25px 50px;
 
     background-image: radial-gradient(100% 100% at 50% 50%, rgba(44, 89, 155, 0.5) 0%, #2B76A2 100%), url(../../public/assets/background/background-hero.jpg);
     background-position: 60% 0%;
