--- a/styles/modules/Navbar.module.scss
+++ b/styles/modules/Navbar.module.scss
@@ -28,11 +28,9 @@
     right: -100vw;
     bottom: 0;
     width: 0;
-    height: 100vh;
     visibility: hidden;
     z-index: 9999;
     width: 100%;
-    height: 100vh;
 
     background-image: url(../../public/assets/background/spics-to-left.svg), linear-gradient(336.04deg, rgba(53, 105, 181) 0%, #3D9ACF 100%);
     background-repeat: no-repeat, no-repeat;
@@ -41,7 +39,7 @@
 
     transition: all .5s ease-in-out;
 
-    padding: 10vh 2.5rem 1vh;
+    padding: 8vh 2.5rem 2vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -51,21 +49,20 @@
     }
 
     &__menu {
-        height: 70vh;
         font-size: 22px;
         letter-spacing: -0.02em;
         font-weight: bold;
 
         &__close {
             position: absolute;
-            top: 20px;
+            top: 0;
             right: 20px;
             color: #FFF;
-            font-size: 30px;
+            font-size: 50px;
         }
 
         li {
-            margin-bottom: 7.5vh;
+            margin-bottom: 5vh;
         }
 
         &__submenu {
@@ -87,7 +84,7 @@
     }
 
     &__menuSocialNetworks {
-        height: 5vh;
+        margin-top: 5vh;
 
         ul {
             display: flex;
@@ -103,15 +100,12 @@
     }
 
     &__menuSecondary {
-        height: 5vh;
         text-decoration: underline;
+        margin-bottom: 20px;
+        margin-top: 30px;
 
-        ul {
-            display: flex;
-        }
-
-        li:first-child {
-            margin-right: 20px;
+        li:last-child {
+            margin-top: 15px;
         }
     }
 }
